--- a/test1level1.html
+++ b/test1level1.html
@@ -72,7 +72,7 @@
 
 
     <section class="featured-courses horizontal-column courses-wrap">
-        <p class="tit text-capitalize"> HTML5 + CSS3 Quiz</p>
+        <p class="tit text-capitalize"> HTML5 + CSS3 </p>
 
         
 <br>
