--- a/About.html
+++ b/About.html
@@ -16,7 +16,7 @@
 <body>
      
     <header>
-                    
+              <div class="About">     
         <nav class="navbar navbar-expand-lg navbar-light navstyle">
                 <a class="navbar-brand" href="#">
                     <img src="img\logo.png" width="120" height="70" alt="">
@@ -58,7 +58,7 @@
                   </form>
                 </div>
               </nav>
-
+            </div> 
             </header>
          <main>
                 <div class="text">
